-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15, 6.6
-
None
-
9b4c35abf (dev), 6affa9890 (6.7), 6bdff3c8a (6.6)
Fusion style is missing clip region for the title in
QFusionStyle::drawComplexControl().
Without that region, the top line of the frame stays visible behind
the vertically centered title.
| For Gerrit Dashboard: QTBUG-121041 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 527981,4 | Fusion style: add clip region for groupbox title | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 531497,2 | Fusion style: add clip region for groupbox title | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 531611,2 | Fusion style: add clip region for groupbox title | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |